# e-commerce-data-platform

./: .env.example  .gitignore  README.md  dbt_project.yml  pyproject.toml  test_api_client.py  test_batch_ingest.py  test_bigquery.py  test_ey
dbt/: profiles.yml.example
dbt/models/: sources.yml
dbt/models/marts/: dim_products.sql  dim_users.sql  fact_orders.sql
dbt/models/staging/: stg_products.sql
docs/: architecture.md  architecture.mmd  diagram.mmd
ingestion/batch/: batch_ingest.py
ingestion/common/: api_client.py  config.py  gcs.py  logging.py  models.py  pubsub.py
ingestion/streaming/: carts_consumer.py  carts_poller.py  state.py
models/staging/: stg_cart_events.sql  stg_users.sql
